<resources>
    <string name="facebook_app_id">1672980782962994</string>

    <string name="app_name">Streetler</string>
    <string name="title_activity_maps">Streetler</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_streetler">Streetler</string>
    <string name="title_activity_login">Streetler:Login</string>
    <string name="title_activity_register">Streetler:Register</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_streetler_maps">Street Events</string>
    <string name="search_street">Search Street</string>

    <string name="register_link_text">New user? Sign up here!</string>
    <string name="login_welcome">Welcome To Streetler!</string>
    <string name="email_hint">E-Mail</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="date_of_birth_hint">Date Of Birth</string>
    <string name="male_female_hint">Sex</string>
    <string name="login_text">Already registered? Login here!</string>
    <string name="register_button_text">Register</string>

    <string-array name="sex_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="action_add_street">Add Street</string>
    <string name="city_hint">City</string>
    <string name="registerbutton_text">REGISTER</string>
    <string name="maintitle_text">STREETLER</string>
    <string name="loginbutton_text">LOGIN</string>
    <string name="title_activity_logged_user">LoggedUserActivity</string>
    <string name="title_activity_streetler_activity_new">StreetlerActivityNew</string>
    <string name="login_with_facebook">Login With Facebook</string>
</resources>
